DevOCL/src/objects/CLQ_Program_Transaction__c.object
<CustomObject>
    <description>This object is used to manage program applications</description>
    <fields>
        <fullName>Annual_Report_Overall_Requirements__c</fullName>
        <label>Annual Report Overall Requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferral</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQDescription_of_other_toxic_substances__c</fullName>
        <label>Description of other toxic substances</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_ACA_Accredited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Camp Accredited by the American Camping Association (ACA)</description>
        <inlineHelpText>Camp Accredited by the American Camping Association (ACA)</inlineHelpText>
        <label>ACA Accredited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_ACA_Verified_Date__c</fullName>
        <description>Date when Accreditation Verified = Yes</description>
        <label>ACA Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_AccreditationVerified__c</fullName>
        <label>Accreditation Verified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Accreditation_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accreditation Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Actual_Knowldg_of_Prsnce_of_Material__c</fullName>
        <description>Do you have actual knowledge of the presence of any of the below identified materials on the property?</description>
        <inlineHelpText>Do you have actual knowledge of the presence of any of the below identified materials on the property?</inlineHelpText>
        <label>Actual Knowledge of Presence of Material</label>
        <picklist>
            <picklistValues>
                <fullName>Lead based paint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asbestos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underground storage of hazards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radon Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other toxic substances</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Actual_Last_Day_of_Operation__c</fullName>
        <label>Actual Last Day of Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Administrator_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Administrator Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Age_Groups_Served__c</fullName>
        <label>Age Groups Served</label>
        <picklist>
            <picklistValues>
                <fullName>Infant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toddler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School-Age</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Age_Groups_Serving__c</fullName>
        <description>Which of the following age groups will the program serve? (check all that apply)</description>
        <inlineHelpText>Which of the following age groups will the program serve? (check all that apply)</inlineHelpText>
        <label>Age Groups Serving</label>
        <picklist>
            <picklistValues>
                <fullName>Infant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toddler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preschool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School-Age</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>CLQ_All_Group_Current_Capacity__c</fullName>
        <formula>CLQ_Program__r.CLQ_Total_Enrollment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Group Current Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_All_above_and_nonpublic_school__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Any program providing child care that meets all of the following requirements and, on October 20, 1987, was being operated by a nonpublic school that holds a charter issued by the state board of education for kindergarten only.</description>
        <inlineHelpText>Any program providing child care that meets all of the following requirements and, on October 20, 1987, was being operated by a nonpublic school that holds a charter issued by the state board of education for kindergarten only.</inlineHelpText>
        <label>All above and chartered nonpublic school</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Any_Problems_With_Tanks__c</fullName>
        <inlineHelpText>Are you aware of any problems, such as leakage</inlineHelpText>
        <label>Any Problems With Tanks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Application_Information_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Application Information Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Application_Review_Notes__c</fullName>
        <label>Application Review Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Approve_Amendment__c</fullName>
        <label>Approve Amendment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Approve_Registration__c</fullName>
        <label>Approve Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_Capacity_Under_2_1_2__c</fullName>
        <label>Approved Capacity Under 2 1/2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_Capacity_Under_2__c</fullName>
        <label>Approved Capacity Under 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_First_Day_at_New_Address__c</fullName>
        <label>Approved First Day at New Address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_Last_Day_at_Current_Address__c</fullName>
        <label>Approved Last Day at Current Address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_Total_Capacity__c</fullName>
        <label>Approved Total Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Approved_by_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True by the Approval Process when Approver/Manager approves the Transaction submitted for Approval</description>
        <label>Approved by Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Approver_Notes__c</fullName>
        <label>Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Asbestos__c</fullName>
        <label>Asbestos</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Assigned_To_Email__c</fullName>
        <description>Field is used in Approval Process</description>
        <label>Assigned To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CLQ_Assigned_To_Me__c</fullName>
        <description>This flag is used in reports to identify &quot;My&quot; transactions</description>
        <formula>$User.Id = CLQ_Transaction_Assigned_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Assigned_To__c</fullName>
        <formula>Owner:User.FirstName + &quot; &quot; +  Owner:User.LastName</formula>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Associated_Fee__c</fullName>
        <label>Associated Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLQ_Associated_Organization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associated Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Program Transactions</relationshipLabel>
        <relationshipName>Program_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Attachment_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attachment Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Aware_of_problems_with_tanks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aware of problems with tanks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Certified_as_CC_prog_in_last_5_yrs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Within the past five years, have you been certified as a child care provider in Ohio?</description>
        <inlineHelpText>Within the past five years, have you been certified as a child care provider in Ohio?</inlineHelpText>
        <label>Certified as CC program in last 5 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Child_Day_Camp_Email__c</fullName>
        <label>Child Day Camp Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CLQ_Child_Day_Camp_Telephone__c</fullName>
        <label>Child Day Camp Telephone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CLQ_City_Physical__c</fullName>
        <label>City.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_City__c</fullName>
        <formula>CLQ_Program__r.CLQ_City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Closing_Reason__c</fullName>
        <label>Closing Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Program&apos;s User Withdrawal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed By Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved and Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed At Applicant&apos;s Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed By System (120 days without submission)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Version Created</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Closure_Reason__c</fullName>
        <label>Closure Reason</label>
        <picklist>
            <controllingField>CLQ_Closure_Type__c</controllingField>
            <picklistValues>
                <fullName>Charter Revoked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Jurisdiction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensed in Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renovation/Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsafe/Damaged Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed – Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License Revoked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voluntary/Enforcement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed through Settlement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization/Affiliation Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organization Merge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Closure_Status__c</fullName>
        <label>Closure Status</label>
        <picklist>
            <picklistValues>
                <fullName>Processed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Processing</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Closure_Type__c</fullName>
        <label>Closure Type</label>
        <picklist>
            <picklistValues>
                <fullName>Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Permanent</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Completed_Review__c</fullName>
        <label>Completed Review Item</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Conducted_by_education_boards_or__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Child care programs conducted by boards if education or by chartered nonpublic schools that are conducted in school buildings and that provide child care to school-age children.</description>
        <inlineHelpText>Child care programs conducted by boards if education or by chartered nonpublic schools that are conducted in school buildings and that provide child care to school-age children.</inlineHelpText>
        <label>Conducted by education boards</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Corporation_Entity_Number__c</fullName>
        <label>Corporation/Entity Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_County__c</fullName>
        <formula>CLQ_Program__r.CLQ_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Current_Under_2_Capacity__c</fullName>
        <formula>CLQ_Program__r.CLQ_Total_Enrollment_Under_2_years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Under 2 Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Currently_Licensed_as_CC_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are you currently licensed as a child care provider/program by ODJFS</description>
        <inlineHelpText>Are you currently licensed as a child care provider/program by ODJFS</inlineHelpText>
        <label>Currently Licensed as CC Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Currenty_Licensed_as_a_provider_by_O__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currenty Licensed as a provider by ODJFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Date_Transaction_Closed__c</fullName>
        <label>Date Transaction Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Day_Camp_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Day Camp Name</label>
        <referenceTo>CLQ_Program__c</referenceTo>
        <relationshipLabel>Program Transactions (Day Camp Name)</relationshipLabel>
        <relationshipName>Program_Transactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Day_Camp_Name_as_on_Accreditation__c</fullName>
        <description>Name of Day Camp as it Appears on the ACA Accreditation Certificate</description>
        <inlineHelpText>Name of Day Camp as it Appears on the ACA Accreditation Certificate</inlineHelpText>
        <label>Day Camp Name as on Accreditation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Deny_Reasons__c</fullName>
        <label>Deny Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Effective_Date_of_Closure__c</fullName>
        <label>Effective Date of Closure</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Estimated_Enrollment__c</fullName>
        <label>Estimated Enrollment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Existing_Child_Care_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Are you purchasing an existing child care business?</description>
        <inlineHelpText>Are you purchasing an existing child care business?</inlineHelpText>
        <label>Existing Child Care Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Existing_License_Number__c</fullName>
        <description>If purchasing existing child care business, provide the license number for that business/program.</description>
        <inlineHelpText>If purchasing existing child care business, provide the license number for that business/program.</inlineHelpText>
        <label>Existing License Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Program Transaction object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_FEIN__c</fullName>
        <formula>CLQ_Associated_Organization__r.CLQ_FEIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FEIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Fee_Amount__c</fullName>
        <label>Fee Amount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLQ_Fee_Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fee Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Food_Service__c</fullName>
        <label>Food Service</label>
        <picklist>
            <picklistValues>
                <fullName>Food Service License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Food Service License Exemption</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Full_Day_Option_Offered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Full Day Option Offered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Program Transactions</relationshipLabel>
        <relationshipName>Program_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Is_the_Day_Camp_ACA_Certified__c</fullName>
        <label>Is the Day Camp ACA Certified</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Last_Day_of_Operation__c</fullName>
        <label>Last Day of Operation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Lead_Based_Paint__c</fullName>
        <label>Lead Based Paint</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Level_of_Radon_Gas__c</fullName>
        <description>If radon gas selected, then provide level of radon gas.</description>
        <inlineHelpText>If radon gas selected, then provide level of radon gas.</inlineHelpText>
        <label>Level of Radon Gas</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_License_Registration_Status__c</fullName>
        <label>License / Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Licensed/Certified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_License_Revoked_Previously__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Was your license ever revoked?</description>
        <inlineHelpText>Was your license ever revoked?</inlineHelpText>
        <label>License Revoked Previously</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_License_Start_Date__c</fullName>
        <label>License Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_Licensed_out_of_state_last_5_years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Within the past five years, have you been certified/licensed as a child care provider by another state? *</description>
        <inlineHelpText>Within the past five years, have you been certified/licensed as a child care provider by another state? *</inlineHelpText>
        <label>Licensed out of state last 5 years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Mailing_State__c</fullName>
        <globalPicklist>CLQ_All_States</globalPicklist>
        <label>Mailing State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_Mailing_Street_Address_2__c</fullName>
        <label>Mailing Street Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Mailing_Street_Address__c</fullName>
        <label>Mailing Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Mailing_ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Materials_stored_in_Tanks__c</fullName>
        <label>Materials stored in Tanks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Materials_stored_in_undergrnd_tanks__c</fullName>
        <description>If select &quot;Underground storage of Hazards&quot;, provide detail of the materials stored.</description>
        <inlineHelpText>If select &quot;Underground storage of Hazards&quot;, provide detail of the materials stored.</inlineHelpText>
        <label>Materials stored in underground tanks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Max_Under_2_5_Capacity__c</fullName>
        <formula>CLQ_Program__r.CLQ_Max_Capacity_Under_2_5_Years__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Under 2.5 Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_Name_of_Child_Day_Camp__c</fullName>
        <label>Name of Child Day Camp</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CLQ_Name_of_Corporation_LLC__c</fullName>
        <label>Name of Corporation/LLC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Name_of_Day_Camp_on_ACA_Certificate__c</fullName>
        <label>Name of Day Camp on ACA Certificate</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_New_Approved_All_Groups_Capacity__c</fullName>
        <label>New Approved All Groups Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_New_Approved_Under_2_5_Capacity__c</fullName>
        <formula>CLQ_Program__r.CLQ_Approved_Capacity_Under_2_5__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Approved Under 2.5 Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_New_Approved_Under_2_Capacity__c</fullName>
        <label>New Approved Under 2 Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_New_BIRN_Site_IRN__c</fullName>
        <label>New BIRN (Site IRN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_New_City__c</fullName>
        <label>New City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_New_County__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New County</label>
        <referenceTo>CLQ_County__c</referenceTo>
        <relationshipLabel>Program Transactions</relationshipLabel>
        <relationshipName>Program_Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_New_Phone_Extension__c</fullName>
        <label>New Phone Extension</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CLQ_New_Phone_Number__c</fullName>
        <label>New Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CLQ_New_State__c</fullName>
        <globalPicklist>CLQ_All_States</globalPicklist>
        <label>New State</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_New_Street_Address_1__c</fullName>
        <label>New Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_New_Street_Address_2__c</fullName>
        <label>New Street Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_New_Zip_Code__c</fullName>
        <label>New Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_No_Expiration_Date__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Expiration Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_No_of_Children_at_Home__c</fullName>
        <description>If the Family Child Care program is located in an applicant&apos;s residence, specify the total number of children that will be in the home at one time, excluding the applicant’s children over 6 years of age.</description>
        <inlineHelpText>If the Family Child Care program is located in an applicant&apos;s residence, specify the total number of children that will be in the home at one time, excluding the applicant’s children over 6 years of age.</inlineHelpText>
        <label>No. of Children at Home</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 6 (Type B)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 12 (Type A)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_None_of_section_5_criteria_apply__c</fullName>
        <defaultValue>false</defaultValue>
        <label>None of section 5 criteria applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CLQ_OOS_ProgramNumber__c</fullName>
        <description>This is the OOS Program Number (text field)</description>
        <label>OOS Program Number</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_OOS_Program_Number__c</fullName>
        <description>This is the Program Number of the Program</description>
        <formula>CLQ_Program__r.CLQ_Program_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_OOS_Program_Type__c</fullName>
        <label>OOS Program Type</label>
        <picklist>
            <picklistValues>
                <fullName>Family Child Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Care Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Camp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Home Aide</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CLQ_OPIN_Number__c</fullName>
        <description>What is your OPIN number?</description>
        <inlineHelpText>What is your OPIN number?</inlineHelpText>
        <label>OPIN Number</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>